further work on layout overlap bug after calculating inputs - will create new branch to address and then merge as practice with branches and merging

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 strong{
   color: rgb(64, 117, 175);
 }
-h1, h2, h3{
+h1, h3{
   text-align: center;
 }
 h3{
@@ -28,13 +28,14 @@ h1{
 }
 #shape-result{
   width: auto;
-  height: 100%;
-  text-align: center;
+  height: auto;
+  text-align: center;*/
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 25px;
   margin-top: 25px;
 }
+
 #final-shape{
   background-color: #c6cbd2;
   width: 400px;
@@ -50,24 +51,24 @@ h1{
 }*/
 #inputs-and-results{
   width: 600px;
-  height: 200px;
+  height: auto;
   margin: 0 auto;
 }
 #top-content{
   width: 600px;
-  height: 100%;
+  height: auto;
   margin: 0 auto;
 }
 .inputs{
   width: 50%;
-  height: 100%;
+  height: auto;
   text-align: center;
   float: left;
   margin: 35px 0 0 0;
 }
 #results{
   width: 50%;
-  height: 100%;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
   float: left;
